- [study] word wrapping issue #62.

--- a/styles/toxstudy.css
+++ b/styles/toxstudy.css
@@ -60,6 +60,10 @@ div.jtox-study-tab .dataTables_wrapper {
   width: 100%;
 }
 
+.jtox-toolkit .jtox-study table td {
+  word-wrap: break-word;
+}
+
 /* Start of table-related classes */
 .jtox-toolkit table.dataTable td.jtox-multi {
   padding: 0px;
